# tree-sitter-minot

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-minot.pc.in
bindings/c/tree_sitter/: tree-sitter-minot.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_minot/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMinotTests/: TreeSitterMinotTests.swift
queries/: highlights.scm  injections.scm  locals.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c
